Commit v0.3.1 Made minor changes to correct positioning on the coming soon page, added spacing to some css for readability.

--- a/html/style/comingsoon.css
+++ b/html/style/comingsoon.css
@@ -3,14 +3,20 @@ body{
     background-color: #ff715b;
     color: #540B0E;
     text-align: center;
-    margin: 30%;
+    margin: 5%;
+
 }
 
 img{
+
     float: right;
+
 }
 
 p{
+
+    padding-top: 30vh;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20pt;
+
 }
